--- a/app/design/frontend/Egits/theme/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Egits/theme/Magento_Theme/layout/default.xml
@@ -1,21 +1,25 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <move element="top.links" destination="header-wrapper" before="top.search" />
-        <referenceBlock name="header.panel" remove="true" />
-        <referenceBlock name="footer_links" remove="true" />
-        <referenceBlock name="form.subscribe" remove="true" />
-        <referenceBlock name="wish-list-link" remove="true" />
-        <referenceBlock name="authorization-link" remove="true" />
-        <referenceBlock name="top.links">
-            <block class="Magento\Customer\Block\Account\Link" name="my-account-link">
-                <arguments>
-                    <argument name="label" xsi:type="string" translate="true">
-                    </argument>
-                    <argument name="class" xsi:type="string">
-                        my-account-link
-                    </argument>
-                </arguments>
-            </block>
-        </referenceBlock>
+    <move element="top.links" destination="header-wrapper" before="top.search"/>
+    <referenceBlock name="header.panel" remove="true" />
+    <referenceBlock name="footer_links" remove="true" />
+    <referenceBlock name="form.subscribe" remove="true" />
+    <referenceBlock name="wish-list-link" remove="true" />
+    <referenceBlock name="authorization-link" remove="true" />
+    <referenceBlock name="top.links">
+        <block class="Magento\Customer\Block\Account\Link" name="my-account-link">
+            <arguments>
+                <argument name="label" xsi:type="string" translate="true"></argument>
+                <argument name="class" xsi:type="string">my-account-link</argument>
+            </arguments>
+        </block>
+    </referenceBlock> 
+    <referenceContainer name="footer">
+        <block class="Magento\Framework\View\Element\Template" name="custom.footer" template="Magento_Theme::footer.phtml" after="-" />
+    </referenceContainer>
+    </referenceBlock>  
+    <referenceContainer name="header-wrapper">
+        <block class="Magento\Wishlist\Block\Link" name="customblock" before="top.search" template="Magento_Theme::link.phtml" />
+    </referenceContainer>
     </body>
 </page>
